--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,14 +1,14 @@
 <div>
-  <div>
-    <ret-blog-summ></ret-blog-summ>
+  <div class="row" style="text-align: left;">
+      <div class="col-md-9">
+        <router-outlet></router-outlet>
+      </div>
   </div>
-  <div>
+  <div class="row">
+    <ret-blog-summ class="col-md-3"></ret-blog-summ>
     <ul class="list-inline">
-          <li><a class="btn btn-primary" routerLink="list" routerLinkActive="active-link">Blog List</a></li>
-          <li><a class="btn btn-primary" routerLink="input" routerLinkActive="active-link">New Blog</a></li>
-      </ul>
-  </div>
-  <div>
-    <router-outlet></router-outlet>
+        <li><a routerLink="/blog/list">Blog List</a></li>
+        <li><a routerLink="/blog/input">New Blog</a></li>
+    </ul>
   </div>
 </div>
