--- a/src/app/blog/summary/blog-summary.component.html
+++ b/src/app/blog/summary/blog-summary.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div style="color: green; font-size: 15px; font-weight: bold; margin-bottom: 1rem; border-bottom: 1px solid grey">
+    <div class="context">
         <span>Total number of Blogs: </span> 
         <span>{{blogCount}}</span>
     </div>
