--- a/src/app/blog/list/blog-list.component.html
+++ b/src/app/blog/list/blog-list.component.html
@@ -1,9 +1,11 @@
-<div *ngFor="let blog of blogs$ | async">
-    <div class="row form-group has-success">
-        <span class="col-md-2 control-label">
-            <span style="cursor: pointer" (click)="editClick(blog.id)" >{{blog.id | rpShortenLength : 5}}</span>
-        </span>
-        <span class="col-md-3 control-label" title="{{blog.title | rpTitle}}">{{blog.title | rpTitle | rpShortenLength : 10}}</span>
-        <span class="col-md-7 control-label" title="{{blog.content}}">{{blog.content | rpShortenLength: 30:'more'}}</span>
+<div class="divList">
+    <div class="row" style="min-height: 7rem;" *ngFor="let blog of blogs$ | async;let index = index;let isOdd = odd;let isEven = even;">
+        <div class="row form-group has-success" [ngClass] = "getRowCssClass(isOdd, isEven, blog)" (click)="setBlogInContext(blog)">
+            <span class="col-md-2 control-label">
+                <span style="cursor: pointer" (click)="editClick(blog.id)" >{{blog.id | rpShortenLength : 5}}</span>
+            </span>
+            <span class="col-md-3 control-label" title="{{blog.title | rpTitle}}">{{blog.title | rpTitle | rpShortenLength : 10}}</span>
+            <span class="col-md-7 control-label" title="{{blog.content}}">{{blog.content | rpShortenLength: 30:'more'}}</span>
+        </div>
     </div>
 </div>
