--- a/src/app/task/list/task.list.component.html
+++ b/src/app/task/list/task.list.component.html
@@ -1,6 +1,7 @@
 <div class="divList">
-    <div class="row" style="min-height: 7rem;" *ngFor="let task of tasks">
-        <div style="background-color: #d9dce0; min-height: 6rem;font-weight: 400;position: relative">
+    <div class="row" style="min-height: 7rem;" *ngFor="let task of tasks;let index = index;let isOdd = odd;let isEven = even;">
+        <div class="row form-group has-success" [class.rowOdd]="isOdd" [class.rowEven]="isEven" 
+        [class.rowSelected]="taskInContext && task.id === taskInContext.id" (click)="setTaskContext(task)">
             <div>
                 <span class="col-sm-7">{{task.description}}</span>
                 <span class="col-sm-2">{{task.taskStatus}}</span>
