--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,40 @@
 .test{
     background-color: #fdf7f7e1;
 }
+
+.rowEven{
+    background-color: #d9dce0; 
+    min-height: 6rem;
+    font-weight: 400;
+    position: relative
+}
+
+.rowOdd{
+    background-color:#bcbdc4; 
+    min-height: 6rem;
+    font-weight: 400;
+    position: relative
+}
+
+.rowSelected{
+    background-color: rgb(241, 125, 125); 
+    min-height: 6rem;
+    font-weight: 400;
+    position: relative
+}
+
+.rowMouseOver{
+    background-color:yellow; 
+    min-height: 6rem;
+    font-weight: 400;
+    position: relative
+}
+
+
+
+.context{
+    color: green; 
+    font-size: 15px; 
+    font-weight: bold; 
+    margin-bottom: 1rem;
+}
