--- a/src/app/blog/input/blog-input.component.html
+++ b/src/app/blog/input/blog-input.component.html
@@ -12,6 +12,14 @@
             <label for="content">Content</label>
             <input type="text" class="form-control" id="content" placeholder="Content" formControlName="content">
         </div>
+        <div class="form-group">
+            <label for="categories">Select Category</label>
+            <select class="form-control" formControlName="categories">
+                <option *ngFor="let category of categoryTypes" [value]="category">
+                    {{category}} 
+                </option>
+            </select>
+        </div>
         <button type="submit" [disabled]="!blogForm.valid || blogData" class="btn btn-default">Submit</button>
         <button *ngIf="blogData" (click)="deleteSelectedBlog(blogForm.id)" type="button" class="btn btn-danger">Delete</button>
     </form>
