--- a/src/app/task/input/task.input.component.html
+++ b/src/app/task/input/task.input.component.html
@@ -15,10 +15,10 @@
       <div class="form-group" [hidden]="!taskForm.value.id">
           <label class="col-sm-3 control-label" for="taskStatus">Status</label>
           <div class="col-sm-7">
-            <div class="btn-group">
-              <label class="btn btn-success" ngDefaultControl [(ngModel)]="taskStatus" formControlName="taskStatus" btnRadio="Pending">Pending</label>
-              <label style="margin-left: 1px;" ngDefaultControl class="btn btn-success" [(ngModel)]="taskStatus" formControlName="taskStatus" btnRadio="Completed">Completed</label>
-            </div>
+              <div class="radio">
+                  <label><input type="radio" formControlName="taskStatus" [value]="taskTypes.Pending">Pending &nbsp;</label>
+                  <label><input type="radio" formControlName="taskStatus" [value]="taskTypes.Completed">Completed &nbsp;</label>
+              </div>
           </div>
       </div>
       <div class="form-group">
